License, events, input, submodules, wrappers - Changed License from LGPLv3 to MPL 2.0 - Event system - Input translation - Submodule inclusion - Containers wrappers

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "thirdparty/frozen"]
 	path = thirdparty/frozen
 	url = https://github.com/serge-sans-paille/frozen.git
+[submodule "thirdparty/SFML"]
+	path = thirdparty/SFML
+	url = https://github.com/SFML/SFML.git
