--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "thirdparty/doctest"]
 	path = thirdparty/doctest
 	url = https://github.com/doctest/doctest.git
+[submodule "thirdparty/rapidobj"]
+	path = thirdparty/rapidobj
+	url = https://github.com/guybrush77/rapidobj.git
