Some refactoring in the containers, removed fmt dependency, added new logger.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,9 +34,9 @@ project(
 set(namespace OhEngine)
 
 # General C++ settings
+set(CMAKE_CXX_STANDARD 20)
 set(CXX_STANDARD_REQUIRED ON) # Requires C++ standard
 set(CMAKE_CXX_EXTENSIONS OFF)
-set(CMAKE_CXX_STANDARD 20)
 
 # --------------------------------------------------------------------------------
 # Enable/disable options
@@ -94,22 +94,21 @@ file(GLOB_RECURSE src_platform_files CONFIGURE_DEPENDS "${platform_dir}/*.cpp")
 add_library(${PROJECT_NAME} OBJECT ${src_files} ${src_platform_files} ${src_renderer_files})
 add_library(${namespace}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
-target_include_directories(
-        ${PROJECT_NAME} PUBLIC
-        $<BUILD_INTERFACE:${include_dir}>
-        $<INSTALL_INTERFACE:include/${PROJECT_NAME}-${PROJECT_VERSION}>
-)
+target_include_directories(${PROJECT_NAME} PUBLIC ${include_dir})
+
+# Renderer header files
+target_include_directories(${PROJECT_NAME} PUBLIC ${renderer_dir})
 
 # Including 3rd party items
 include("${CMAKE_CURRENT_LIST_DIR}/thirdparty/thirdparty.cmake")
-target_set_warnings(fmt sfml-graphics DISABLE ALL)
 
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/thirdparty/logger-cpp/code/include)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/thirdparty/frozen/include)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/thirdparty/rapidobj/include)
 set_directory_properties(${CMAKE_CURRENT_LIST_DIR}/thirdparty/frozen PRIVATE -w)
 
-add_dependencies(${PROJECT_NAME} fmt::fmt sfml-graphics)
-target_link_libraries(${PROJECT_NAME} PUBLIC fmt::fmt sfml-graphics)
+add_dependencies(${PROJECT_NAME} sfml-graphics)
+target_link_libraries(${PROJECT_NAME} PUBLIC sfml-graphics)
 
 # Precompiled headers
 target_precompile_headers(${PROJECT_NAME} PUBLIC
@@ -121,11 +120,16 @@ if (${cmake_build_type_tolower} STREQUAL "release" OR ${cmake_build_type_tolower
     target_enable_lto(${PROJECT_NAME} optimized)
 endif ()
 
+# --------------------------------------------------------------------------------
+# Extra flags and compile options
+# --------------------------------------------------------------------------------
 if (${main_project})
-    #    target_compile_options(${PROJECT_NAME} PRIVATE -fsafe-buffer-usage-suggestions)
-    target_set_warnings(${PROJECT_NAME} ENABLE ALL
+    target_set_warnings(${PROJECT_NAME}
+            ENABLE ALL
             AS_ERROR ALL
             DISABLE Annoying)
+    target_compile_options(${PROJECT_NAME} PUBLIC -Wno-weak-vtables)
+    target_compile_options(${PROJECT_NAME} PUBLIC -Wno-unsafe-buffer-usage)
 endif ()
 
 # --------------------------------------------------------------------------------
